syntax = "proto3";

import "cline/common.proto";

package cline;
option java_package = "bot.cline.proto";
option java_multiple_files = true;

service VoiceService {
  rpc startRecording(StartRecordingRequest) returns (RecordingResult);
  rpc stopRecording(StopRecordingRequest) returns (RecordedAudio);
  rpc getRecordingStatus(GetRecordingStatusRequest) returns (RecordingStatus);
  rpc transcribeAudio(TranscribeAudioRequest) returns (Transcription);
}

// Request messages
message StartRecordingRequest {
  Metadata metadata = 1;
  // Could add options later
}

message StopRecordingRequest {
  Metadata metadata = 1;
}

message GetRecordingStatusRequest {
  Metadata metadata = 1;
}

message TranscribeAudioRequest {
  Metadata metadata = 1;
  string audio_base64 = 2;
  string language = 3; // optional language hint
}

// Plain, reusable response types
message RecordingResult {
  bool success = 1;
  string error = 2;
}

message RecordedAudio {
  bool success = 1;
  string audio_base64 = 2;
  string error = 3;
}

message RecordingStatus {
  bool is_recording = 1;
  double duration_seconds = 2;
  string error = 3;
}

message Transcription {
  string text = 1;
  string error = 2;
}
