import { StartRecordingRequest, RecordingResult } from "@shared/proto/cline/voice"
import { Controller } from ".."

/**
 * Starts audio recording
 * @param controller The controller instance
 * @param request The request to start recording
 * @returns RecordingResult indicating success or failure
 */
export async function startRecording(controller: Controller, request: StartRecordingRequest): Promise<RecordingResult> {
	try {
		// TODO: Implement actual audio recording service
		// For now, return a success response
		return RecordingResult.create({
			success: true,
			error: "",
		})
	} catch (error) {
		console.error("Error starting recording:", error)
		return RecordingResult.create({
			success: false,
			error: error instanceof Error ? error.message : "Unknown error occurred",
		})
	}
}
